@@ -2,6 +2,7 @@
 Hash: SHA256
 
 DIST lammps-10Mar14.tar.gz 58558593 SHA256 019374cd421451e1e8bb03da4626f0d7c87894ee0ff59291e16ee71738186d90 SHA512 04c48160989c702ce744544cdc4b2a9dd27ba0b00ce59d4ab09801e235c068c7f40750ef04c3150cf2ed864b86db4d49c3ae604c741da2a491610154f3c585c9 WHIRLPOOL 153eda49b5c87b02d478756f5c46c99c8aa99c34d7da99ad9c41e054cd7d3a06929a11527e94bafb86cdd7396c9c73d02f250e30ab5182ae5cd43a331fe5e6ab
+DIST lammps-11Jul14.tar.gz 64634749 SHA256 05a9af6fae3f27e41ee776fb3c306a07c2f80b953770fa1ccbd36bbbb6991283 SHA512 6951d9af5d1f77f3160ba13ed70bb1ff71d1f8da0716b784b3e3cf010eb8b9ee68ac49befe4602771bbb4a473fd531f07568d922e0bbff97d4193f9e8c0ea793 WHIRLPOOL f1b814171e81898f7138b6116d4bddedfdccc0a956d11184fb64c82722905a28a97420c19b65edef488915ce956479b0ba255767b45f2f70c53e5674ee6e3744
 DIST lammps-12Feb14.tar.gz 58143004 SHA256 31f3dcc33524d56405c06306c4ef02fc4d41d72dc0b7ac3cd9ef033f42e08c3d SHA512 525b592e3b4779fffa7a96a92d6972b1bfed8b3727746b6065c9743628421aaf4fa8ba6e72d891c2c6f016f776b9155bdff9b8dfeb8ed4dec164b334253255a2 WHIRLPOOL e15a2b56ee2918a478c979239565ad01346b60d026f2a5a6051b339f08e9328c0940767843b7fd08aaa225d097fe254d0cebbd07902671404874b9d63c91916f
 DIST lammps-12Mar14.tar.gz 58562523 SHA256 7575cdf8d2edf0429804d2d1d523c24921fe4e9eb4276bcfc5bb3f3cc480ba41 SHA512 a91e9ce5f0de0c16383b4f4d53c1ada2dca1018458c0e67a91a70df8a50cb14a52dc1e222d97af8119ad0d7c75bb01052d10be00b330ba310f45d76a5706ce49 WHIRLPOOL fb755fe7cf756c54a8843eefc5fc6420006ef6903dc049d88ca145432e8bb3eb4ac8b83360d8d138d02c2fbd967c889d7d7aaf79ee78cce736e54fcb5276155f
 DIST lammps-14Feb14.tar.gz 58547063 SHA256 188aa10c8984457e5559c30396ef56a0af51c69242b6b1ac10afa29b11ace4d9 SHA512 9fea6054e507eebc3eb41e7a6685d91bd58afd4b4c4eac692bf21bfadf48d34dfe6143d1775be89badfcb3ef5ec5a81e15c06797ac055cdf149f8139c868a0f7 WHIRLPOOL 7460b93649e9c3a6e0648e6368291205e97796b536a7b51ef59766d9db65ef7b8c2a43f24194980762c9c5b2b896d75b13c14e1350ea344fc46075269c87b098
@@ -25,12 +26,13 @@ EBUILD lammps-20140314.ebuild 4149 SHA256 96eb57bbe13d1d51222fa1edd9827c79c00e7d
 EBUILD lammps-20140320.ebuild 4625 SHA256 48c1ad720a757c0a705a2d5bd4606f5435a0d3e14e6bc4a7360f075369cde980 SHA512 c122dcc05362eba440e532c3d55435cc4493af6669638ed897171f6a3df60eda9ba49a6251f2b9959f0fe32361eeeddf90f1b4c589ec7f07529c3609883325af WHIRLPOOL f652faa83734b0f65dad4f836efbe3378db8fb837e3a0fc109e410fbce2864f1ac1c907f69d8a9ed0a70fca5198ddf5dcbb9e1b2035f1cb327fbea6251bbafc1
 EBUILD lammps-20140614.ebuild 4687 SHA256 0aa9352004a2628c6d9fe1f5389750e4f0e825a608382846196bbf54aeceeff9 SHA512 79e1c338af61634db76905c93e6d477c9388d2944a3c1a62a9285ef8225e506a356bbc2e38305adcd849c70a5b46ccd947755d2213fd52de5af579e2134461b7 WHIRLPOOL 9b5f94236f7f3296a70bedd2a2de84131f841609ec346069c35a2cce4ce7f43d1ec44b20fc8f740a0e04497fd82c6b96ed5d6fb5cab1b6493af0ff195eb5e8a7
 EBUILD lammps-20140628.ebuild 4687 SHA256 3155ae3ca01dda584e43d4d1dc9f685cee0f60abd0153aaaa9e3329a888b2d8d SHA512 4dddfeae6156c1cfacf7f6992f203e614c93c2a2f223567a6b04280cf895c21567fa300152b328623b642458dd5fcc814ce41c179a736288c1ce508dc12ae800 WHIRLPOOL e96b02d538dad49bcf5e1b1df06f5fd1c7d6e67e7ba71dd2e79cce11b36a3f562b2f92a0f322052d3c3e4f3a4a5e702d1cbdd6749c193d2481a5620331b65993
-MISC ChangeLog 5932 SHA256 bc341cfd77f08414cf05a0ae6a73a318b4ab4e27505369bf5faf9cb1383f1d28 SHA512 bb75c368f9baa00bde2ff94534fcbf939e88d3793d00a56e5fdaf3f4008ee164d61e07902fc39dcea5d8d9ca4d047eeb43d6c315433e7aa503db6f34f1a6eac9 WHIRLPOOL 6c85039f345011227b18d5d29f2038812dceb64f9c5ba467737ae32159c2504d59d74541ade296b606ff1293dbf174d19959719bd44dc549318a46a5dd65ec0d
+EBUILD lammps-20140711.ebuild 4687 SHA256 88a3a3caa2f795ab670db8baaed9c08f50326682381d10d3c2dcc12bf700bbea SHA512 469c448e7d2c0f2791f02057f7478714f95e1aa5c654dea648d62260c69718b1d8a5ec533957fb774ec93cff26239532004e85642fa8f4b73118b2660a415796 WHIRLPOOL 9838fc2e285422a447230d56b41327ed6058baa0ca7b129b4c0c07f3b54518e5770281ab73e4ab573b0a83b7c15920ce9fee8b4bba6090599c89d3a22165673d
+MISC ChangeLog 6088 SHA256 9c00ffae8718672b6e9bcd4ad3cc7fc7f4cc8b1351a89f7036c335e994fbe964 SHA512 74e1a43fa142dffc4a3a1eda4900cf8c7fa701b10ab60db0836dd9fdbb0a22b9131765c13a1f8f17a6e38c8bf431bfd0afd27babfa73654f86b78f0fd1b21c46 WHIRLPOOL 46304297b34ac78fa2e5ec8423aea47da1b92f26d2e8b0af2f1f9fcc3354da7a8c2cc302ee845ac6b08a9c439fb75d9bc39d6d4d7fb00f6066fd6c2df8b5ad57
 MISC metadata.xml 1584 SHA256 4d06db7368b155db1484a6c0792a366b37541260e700248ccf542e5fe28ffbc7 SHA512 b0bbd1fdd37e35ccc0cd4d34bb9afa09910b56a14daa078148aefcce4dc13408c1a5d5a40b865a37bc917764f5b91e266256b9ca83e0f8009859d955b68fe6a8 WHIRLPOOL ff65f1a03910b4fa5758d5537d898c733971e5f339dcd8150bc1596dfcf490b4de2be7f520405a47274e1e9827eddc3d8a1324f2f169d575d1e4584dc01e9787
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlO1a+QACgkQf15tZKyRylLIFQCeLtx2twrjtnDUv1vMHPzwhBPw
-b60AnAipCl+/gK+XJbG7s2poY/+/ArdP
-=+3+K
+iEYEAREIAAYFAlPERjEACgkQf15tZKyRylIrowCgkkACOtK7pAedxk+uVEAVO9bj
+lYEAn1fCsiaudsFltJd8RTlmJGWW0dyV
+=5p/F
 -----END PGP SIGNATURE-----
